Fixed wave overlap and

--- a/src/styles/parallax.scss
+++ b/src/styles/parallax.scss
@@ -1,27 +1,33 @@
-#topParallax{
-    height:calc(100vh - 70px);
-    background:#3c3c3b;
-    overflow:hidden;
+.topWrapper{
     position:relative;
-
-    .innerParallax{
-        transition: scale 0.01s;
+    background:#3c3c3b;
+    #topParallax{
         height:calc(100vh - 70px);
-        position:fixed;
+        overflow:hidden;
+        position:relative;
+
+        .innerParallax{
+            transition: scale 0.01s;
+            height:calc(100vh - 70px);
+            position:fixed;
+        }
     }
     #waveCover{
-        width:100%;
-        max-height: 50vh;
-        position:absolute;
-        bottom:0;
+        /*position:absolute;
+        bottom:-10px;*/
+        position:relative;
+        z-index: 2000;
+        width:100vw;
+        padding-bottom:-20px;
+        overflow: hidden;
         .svg-wave{
-            height:auto;
-
+            width:100vw;
         }
     }
 }
 
 #bottom_parallax{
+    margin-top:-10px;
     background:#f2f2f2;
     z-index:1000;
     position:relative;
